[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Environment/World.gd" type="Script" id=1]
[ext_resource path="res://scripts/GLOBAL/gameControls.gd" type="Script" id=2]
[ext_resource path="res://scenes/Interactables/itemSlots.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Sounds/backgroundSound.wav" type="AudioStream" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="gameControls" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="roomLayer" type="Node2D" parent="."]

[node name="itemSlots" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -8.35095, 8.35094 )

[node name="actionBtns" type="Node2D" parent="."]

[node name="dialogBoard" type="Node2D" parent="."]

[node name="difficuiltyIncreaser" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="sounds" type="Node2D" parent="."]
editor/display_folded = true

[node name="playerFootsteps" type="AudioStreamPlayer2D" parent="sounds"]

[node name="buttonClick" type="AudioStreamPlayer2D" parent="sounds"]

[node name="dialogBlip" type="AudioStreamPlayer2D" parent="sounds"]

[node name="hitEffect" type="AudioStreamPlayer2D" parent="sounds"]

[node name="itemAcquired" type="AudioStreamPlayer2D" parent="sounds"]

[node name="matchBurn" type="AudioStreamPlayer2D" parent="sounds"]

[node name="woodDoorOpen" type="AudioStreamPlayer2D" parent="sounds"]
volume_db = -16.0

[node name="backgroundMusic" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource( 4 )
volume_db = 7.0
autoplay = true
[connection signal="timeout" from="difficuiltyIncreaser" to="." method="_on_raiseGhostCount_timer"]
[connection signal="finished" from="sounds/backgroundMusic" to="." method="_on_backgroundMusic_finished"]
